k8s/istio/api-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v2
  labels:
    app: api-v2
spec:
  ports:
  - port: 5002
    name: api-v2
  clusterIP: None
  selector:
    app: api-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2
  labels:
    app: api-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v2
  template:
    metadata:
      labels:
        app: api-v2
    spec:
      containers:
      - name: api-v2
        image: public.ecr.aws/cloudacademy-labs/cloudacademy/labs/k8s-assessment/api
        ports:
        - containerPort: 5002
